--- a/templates/usedtrade/index.html
+++ b/templates/usedtrade/index.html
@@ -5,17 +5,17 @@
             <ul class="usedTradeBox fontCase01">
                 {% for data in data %}
                     <li>
-                        <a href="">
+                        <a href="{% url 'usedtrade:detail' data.id %}">
                             <div class="imgBox borderBox"
-                                 style="background-image: url('../../static/images/realTime01.png');">
+                                 style="background-image: url('{{ data.file_set.last.file }}');">
                                 실시간 인기 중고 이미지
                             </div>
                             <p>
-                                <time>2시간전</time>
+                                <time>{{ data.create_date }}</time>
                                 {{ data.title }}
-                                <strong>605,000원</strong>
+                                <strong>{{ data.price }}원</strong>
                             </p>
-                            <small>대구 중구 달서동</small>
+                            <small>목포대학교 근처</small>
                         </a>
                         <div class="iconBox">
                             <div class="imgBox heartIcon">
