--- a/templates/usedtrade/detail.html
+++ b/templates/usedtrade/detail.html
@@ -52,7 +52,7 @@
                             </div>
                             <strong>{{ data.price }}원</strong>
                             <p>
-                                {{ data.content }}
+                                {{ data.content|linebreaks }}
                             </p>
                             <button class="blackBtn">거래하기</button>
                         </div>
