--- a/templates/터치웹 PC 2021-11-23/css/page.css
+++ b/templates/터치웹 PC 2021-11-23/css/page.css
@@ -1,3 +1,68 @@
+.borderBox{ border: 1px solid #cccccc;}
+.paddingBox{padding: 30px 20px; box-sizing: border-box;}
+
+.imgBox{background-repeat: no-repeat; background-size: cover; background-position: center; text-indent: -9999px;}
+
+.fontCase01 strong{display: block; font-size: 20px; font-weight: 800; margin-bottom: 15px;}
+.fontCase01 small{display: inline-block; font-size: 14px; font-weight: 700; color: #888888; margin-left: 5px;}
+.fontCase01 p{font-size: 16px; line-height: 24px;}
+.fontCase01 time{display: block; font-size: 12px; color: #888888;}
+
+.hoverEvent li:hover p{color: #ff9900; text-decoration: underline;}
+.hoverEvent li:hover p time{text-decoration: none;}
+
+
+.mainPage section h2{font-size: 26px; font-weight: 800; margin-bottom: 20px;}
+
+
+/* 메인 베너 */
+.mainBanner{position: relative; line-height: 0;}
+.mainBanner img{width: 100%;}
+.mainBanner a{position: absolute; right: 0; bottom: 0; width: 205px; height: 55px; line-height: 1; background-color: black; padding: 0 20px 0 25px; box-sizing: border-box; color: white; display: flex; justify-content: space-between; align-items: center; font-size: 20px; font-weight: 700;}
+
+/* 메인 게시판 */
+.leftContArea .boardArea{display: flex; flex-wrap: wrap; justify-content: space-between;}
+.leftContArea .boardArea > div:not(:first-child){margin-top: 10px;}
+.leftContArea .boardArea > div strong{display: block; font-size: 26px; font-weight: 800; margin-bottom: 35px; display: flex; justify-content: space-between; align-items: center;}
+.leftContArea .boardArea > div ul li a{font-size: 18px; display: flex; justify-content: space-between; align-items: center;}
+/* .leftContArea .boardArea > div ul li:hover a p{color: #ff9900; text-decoration: underline;} */
+.leftContArea .boardArea > div ul li a p{max-width: calc(100% - 75px); white-space: nowrap; overflow: hidden; text-overflow: ellipsis;}
+.leftContArea .boardArea > div ul li a time{font-size: 16px; color: #888888;} 
+
+.leftContArea .boardArea > div.width100{width: 100%; position: relative;}
+.leftContArea .boardArea > div.width100::after{content: ''; position: absolute; left: calc(50% - 0.5px); top: 0; width: 1px; height: 100%; background-color: #f6f6f6;}
+.leftContArea .boardArea > div:not(.width100){width: 440px;}
+
+.leftContArea .boardArea > div.width100 ul{display: flex; flex-wrap: wrap; justify-content: space-between;}
+.leftContArea .boardArea > div.width100 ul li{width: calc((100% - 45px) / 2);}
+.leftContArea .boardArea > div.width100 ul li:not(:nth-child(-n + 2)){margin-top: 25px;}
+
+.leftContArea .boardArea > div:not(.width100) ul li:not(:first-child){margin-top: 25px;}
+
+
+/* 메인 탭 , 원룸 / 거래 */
+.tabArea .tabBtn{display: flex;}
+.tabArea .tabBtn li{flex: 1;}
+.tabArea .tabBtn li button{width: 100%; height: 60px; font-size: 26px; color: #a8a8a8; font-weight: 700; background-color: #f5f5f5; border-style: solid; border-color: #e0e0e0;}
+.tabArea .tabBtn li:nth-child(1) button{border-width: 1px 0 0 1px;}
+.tabArea .tabBtn li:nth-child(2) button{border-width: 1px 1px 0 0;}
+.tabArea .tabBtn li button.active{color: white; background-color: #ff9900; border-color: #ff9900;}
+
+.tabArea .tabContents{border: 1px solid #ff9900;}
+.tabArea .tabContents ul li:not(:last-child){margin-bottom: 10px;}
+.tabArea .tabContents ul li a{display: flex; align-items: center;}
+.tabArea .tabContents ul li a .imgBox{width: 200px; height: 135px; border: 1px solid #b8b8b8; margin-right: 25px; background-repeat: no-repeat; background-size: cover; background-position: center;}
+
+
+/* 메인 인기원룸 */
+.popularArea ul{display: flex; flex-wrap: wrap; justify-content: space-between;}
+.popularArea ul li{width: 440px;}
+.popularArea ul li:not(:nth-child(-n + 2)){margin-top: 10px;}
+.popularArea ul li a{display: flex; align-items: center; background-color:#f5f5f5;}
+.popularArea ul li a .imgBox{width: 200px; height: 135px; margin-right: 15px;}
+
+
+
 /* 메인 실시간 인기 중고 */
 .mainPage .usedTradeBox li{width: 215px;}
 .mainPage .usedTradeBox li a .imgBox{height: 145px;}
@@ -340,7 +405,6 @@ aside > *:not(:last-child){margin-bottom: 30px;}
 .oneRoomPage .registrationArea .imgRegiBox + div{border-width: 0 1px 1px 1px; border-style: solid; border-color: #e0e0e0; padding: 30px 0; text-align: center;}
 .oneRoomPage .registrationArea .imgRegiBox + div input[type="checkbox"]{display: none;}
 .oneRoomPage .registrationArea .imgRegiBox + div label{display: block; margin-bottom: 30px;}
-
 
 
 
